Cariani, Santorio & Wellwood (2024) states-based confidence reports (0.225.3)

--- a/blog/data/references.bib
+++ b/blog/data/references.bib
@@ -1134,6 +1134,34 @@
   sources   = {Theories/Semantics/Lexical/Adjective/Theory.lean}
 }
 
+@article{cariani-santorio-wellwood-2024,
+  author    = {Cariani, Fabrizio and Santorio, Paolo and Wellwood, Alexis},
+  year      = {2024},
+  title     = {Confidence Reports},
+  journal   = {Semantics \& Pragmatics},
+  volume    = {17},
+  number    = {14},
+  pages     = {1--40},
+  doi       = {10.3765/sp.17.14},
+  subfield  = {semantics/lexical},
+  role      = {formalized},
+  sources   = {Theories/Semantics/Lexical/Adjective/StatesBased.lean;Theories/Semantics/Attitudes/Confidence.lean}
+}
+
+@article{wellwood-2015,
+  author    = {Wellwood, Alexis},
+  year      = {2015},
+  title     = {On the Semantics of Comparison Across Categories},
+  journal   = {Linguistics and Philosophy},
+  volume    = {38},
+  number    = {1},
+  pages     = {67--101},
+  doi       = {10.1007/s10988-015-9165-0},
+  subfield  = {semantics/lexical},
+  role      = {cited},
+  sources   = {Theories/Semantics/Lexical/Adjective/StatesBased.lean}
+}
+
 @incollection{barker-2011,
   author    = {Barker, Chris},
   year      = {2011},
