Mizuno (2024) Anderson conditional strategies: X-marking vs O-marking typology (0.225.3)

--- a/blog/data/references.bib
+++ b/blog/data/references.bib
@@ -978,6 +978,20 @@
   sources   = {Phenomena/Conditionals/Studies/EvcenBaleBarner2026/Data.lean;Phenomena/Conditionals/Studies/EvcenBaleBarner2026/Bridge.lean}
 }
 
+@article{mizuno-2024,
+  author    = {Mizuno, Teruyuki},
+  year      = {2024},
+  title     = {Strategies for Anderson Conditionals},
+  journal   = {Semantics and Pragmatics},
+  volume    = {17},
+  number    = {8},
+  pages     = {1--14},
+  doi       = {10.3765/sp.17.8},
+  subfield  = {semantics/conditionals},
+  role      = {formalized},
+  sources   = {Theories/Semantics/Conditionals/Anderson.lean}
+}
+
 % ══════════════════════════════════════════════════════════════════════════════
 %  semantics/tense
 % ══════════════════════════════════════════════════════════════════════════════
