Wellwood (2015) cross-categorial measurement semantics: DimensionallyRestricted, MuchSem, aspectual shift bridges (0.225.5)

--- a/blog/data/references.bib
+++ b/blog/data/references.bib
@@ -1172,8 +1172,8 @@
   pages     = {67--101},
   doi       = {10.1007/s10988-015-9165-0},
   subfield  = {semantics/lexical},
-  role      = {cited},
-  sources   = {Theories/Semantics/Lexical/Adjective/StatesBased.lean}
+  role      = {formalized},
+  sources   = {Theories/Semantics/Lexical/Measurement.lean, Theories/Semantics/Lexical/Adjective/StatesBased.lean}
 }
 
 @incollection{barker-2011,
